# Minecraft.and.MiniWorldCreata-CrossPlatform-CrossPlay

./: .gitignore  AGENT_CHANGES_LOG.md  AUDIT_REPORT.txt  BLOCK_ID_TOOLS_README.md  BeforeDevelopment.md  CHANGELOG.md  CHECKPOINT_RESUME.md  COMPLETE.md  COMPONENT_MANIFEST.json  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REPORT.md  DEPLOY_AND_RUN.bat  DEPLOY_AND_RUN.md  DEPLOY_AND_START.bat  EXTERNAL_RESOURCES.md  FINAL_CHECKLIST.md  FINAL_PROGRESS_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GITHUB_STRUCTURE.md  GITHUB_UPLOAD_READY.md  HANDSHAKE_VERIFICATION_COMPLETE.sanitized.md  INTERACTIVE_TEST_COMPLETE.md  INTERCONNECT_ANALYSIS.md  LICENSE  ORGANIZATION_SUMMARY.md  PHASE3_PREP.sh  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.json  PROJECT_STRUCTURE.md  QUICK_ACTION.md  QUICK_START.bat  QUICK_START.md  QUICK_START_DEX.md  README.md  README.txt  (+102 more)
.github/: PULL_REQUEST_TEMPLATE.md  prepare_for_upload.md
ErrorLog/: ACE_ANTI_CHEAT_ANALYSIS.md
Releases/: RELEASE_NOTES.md
apk_downloads/: DECOMPILE_GUIDE.md  DOWNLOAD_OFFICIAL_APK_NOW.md  MANUAL_DOWNLOAD_GUIDE.md  README.md  decompile_apk.py  decompile_checkpoint.py  decompile_miniworld_cn.py  decompile_with_progress.py  download_apk.py  download_miniworld_en.py  download_official_miniworld.md  miniworld_cn_1.53.1.apk.location  miniworld_cn_latest.apk.location  miniworld_en_1.7.15.apk.location
config/: config.example.json
data/: block_mappings.json  global_blockid_analysis.json  mnw_mc_block_mapping_v2.json
demo/: auto_demo.py  protocol_demo.py  run_demo.bat  simple_demo.py
docs/: 21-Memory-Analysis-Report.md  22-Packet-Capture-Analysis.md  ACE_UNPACK_GUIDE.md  API.md  ARCHITECTURE.md  B-ToDo.md  BLOCK_ID_EXTRACTION_GUIDE.md  BeforeDevelopment.md  BlackDex_Output_Guide.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DevelopmentStatus.md  FEASIBILITY_REPORT.md  Go_Mapping_Integration_Report.md  MINECRAFT_PLATFORMS.md  NextSteps.md  PR-v1.0.0_26w13a.md  PROTOCOL_ANALYSIS_REPORT.md  Phase1_Architecture.md  Phase1_Completion_Report.md  Phase3_Progress_Report.md  Phase4_Completion_Report.md  Phase4_Plan.md  Phase4_Progress_Report.md  Phase5_Plan.md  Phase5_Progress_Report.md  Phase6_Plan.md  ProjectPlan.md  ProtocolAnalysisReport.md  ProtocolImplementation.md  TechnicalDocument.md  ToDo.md  USAGE.md  USER_GUIDE.md  geysermc_modification_research.md  minecraft_offline_launch.md
handshake_analysis/: HANDSHAKE_ANALYSIS_REPORT.md  handshake_analysis.json
mnmcp-core/: pyproject.toml  requirements.txt
mnmcp-core/data/: biome_mapping_v1_complete.json  block_mapping_unified.json  block_mapping_v3_complete.json  block_mappings_extended.json  entity_mapping_v1_complete.json  item_mapping_v1_complete.json  mnw_block_item_ids.json  mnw_block_mapping_from_go.json  mnw_gamedata_full.json  mnw_mc_unified_mapping.json
mnmcp-core/src/mnmcp/: __init__.py
mnmcp-core/src/mnmcp/crypto/: __init__.py
mnmcp-core/src/mnmcp/mapping/: __init__.py
mnmcp-core/src/mnmcp/network/: __init__.py  live_connector.py
mnmcp-core/src/mnmcp/physics/: __init__.py
mnmcp-core/src/mnmcp/protocol/: __init__.py  mnw_constants.py  protobuf_codec.py  wpkg_codec.py
mnmcp-core/src/mnmcp/utils/: __init__.py  config.py  logging.py  watcher.py
mnmcp-core/tests/: test_core.py  test_phase3.py
mnmcp-personal/: README.md  pubspec.yaml
mnmcp-server/: README.md  build-exe.bat  pubspec.yaml  run.bat
mnmcp-shared/: pubspec.yaml
mnmcp-streamer/: README.md  pubspec.yaml
protocol_analysis/: README.md  __init__.py  packet_analyzer.py
proxy_server/: main.py
reverse_engineering/: both_decompile_checkpoint.json  session_001_terminal_log.md  session_002_terminal_log.md  session_003_terminal_log.md  session_004_terminal_log.md  session_005_terminal_log.md  session_006_terminal_log.md  session_007_terminal_log.md  session_008_terminal_log.md  session_009_terminal_log.md  session_010_terminal_log.md  session_011_terminal_log.md  session_012_terminal_log.md  session_013_terminal_log.md  session_014_analysis_summary.md  session_015_dex_dump_guide.md  session_015_dex_dump_in_progress.md
scripts/: create_release.py  setup.ps1  setup.sh
server/: README.md  download_paper.py  start.bat
setup/: README.md  register_account_guide.md  test_accounts.md  wireshark_setup.md
src/: __init__.py  bridge.py  bridge_v2.py
tests/: __init__.py  test_block_mapper.py  test_crypto.py  (+3 more)
(+175 files in other folders)
